# r2sundials

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS  NEWS.md  Readme.Rmd  Readme.md  cleanup  configure  configure.ac  configure.win  configure.win.patch  gdb.txt  todo.txt
R/: RcppExports.R  package.R  translate.R  zzz.R
inst/: CITATION  COPYRIGHTS
inst/include/: r2sundials.h  rsundials.h  sunlinsol_rmumps.h
inst/include/sundials/: sundials_config.h  sundials_hashmap.h  sundials_memory.h
inst/unitTests/: runit.r2cvodes.R
man/: cvodes.Rd  get_cnst.Rd  r2cvodes.Rd  r2sundials-package.Rd  rsundials-package.Rd
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  RcppExports.cpp  r2sundials.cpp  rsundials.cpp  sunlinsol_rmumps.cpp
src/lib/: readme.txt
src/lib/cvodes/: cvodes_diag.c  cvodes_io.c  cvodes_ls.c
src/lib/nvector/serial/: nvector_serial.c
src/lib/sundials/: sundials_context.c  sundials_direct.c  sundials_errors.c  sundials_futils.c  sundials_lapack_defs.h  sundials_logger.c  sundials_nvector.c  sundials_profiler.c
src/lib/sunmatrix/band/: fsunmatrix_band.c  sunmatrix_band.c
src/lib/sunmatrix/dense/: sunmatrix_dense.c
src/lib/sunmatrix/sparse/: fsunmatrix_sparse.c  sunmatrix_sparse.c
tests/: RUnit.R  testthat.R
tests/testthat/: test_r2sundials.R  test_rsundials.R
